Update examplesUpdate examples

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -26,7 +26,9 @@ add(custom_types_1 custom_types)
 add(custom_types_2 custom_types)
 add(custom_types_3 custom_types)
 add(dancing_kirby message_passing)
-add(dining_philosophers message_passing)
+add(delegating message_passing)
+add(fixed_stack message_passing)
+add(cell message_passing)
 add(hello_world .)
 add(aout .)
 add(calculator message_passing)
@@ -35,6 +37,9 @@ add(group_server remote_actors)
 add(group_chat remote_actors)
 add(simple_broker brokers)
 add(simple_http_broker brokers)
+add(dining_philosophers dynamic_behavior)
+add(skip_messages dynamic_behavior)
+add(behavior_composition composition)
 
 if(NOT CAF_NO_PROTOBUF_EXAMPLES)
   find_package(Protobuf)
