Add dict_behavior example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -39,7 +39,8 @@ add(simple_broker brokers)
 add(simple_http_broker brokers)
 add(dining_philosophers dynamic_behavior)
 add(skip_messages dynamic_behavior)
-add(behavior_composition composition)
+add(calculator_behavior composition)
+add(dictionary_behavior composition)
 
 if(NOT CAF_NO_PROTOBUF_EXAMPLES)
   find_package(Protobuf)
