--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -26,9 +26,11 @@ add(custom_types_1 custom_types)
 add(custom_types_2 custom_types)
 add(custom_types_3 custom_types)
 add(dancing_kirby message_passing)
+add(request message_passing)
 add(delegating message_passing)
 add(fixed_stack message_passing)
 add(cell message_passing)
+add(divider message_passing)
 add(hello_world .)
 add(aout .)
 add(calculator message_passing)
