Add example for response promises

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -30,6 +30,7 @@ add(. hello_world)
 add(message_passing cell)
 add(message_passing divider)
 add(message_passing request)
+add(message_passing promises)
 add(message_passing calculator)
 add(message_passing delegating)
 add(message_passing fixed_stack)
