Provide new CAF_MAIN convenience API

--- a/examples/caf-application.ini
+++ b/examples/caf-application.ini
@@ -22,6 +22,8 @@ profiling-output-file="/dev/null"
 enable-automatic-connections=false
 ; accepted alternative: 'asio' (only when compiling CAF with ASIO)
 network-backend='default'
+; heartbeat message interval in ms (0 disables heartbeating)
+heartbeat-interval=0
 
 ; when loading riac::probe
 [probe]
