Update example INI file and manual refs

--- a/examples/caf-application.ini
+++ b/examples/caf-application.ini
@@ -22,6 +22,8 @@ profiling-output-file="/dev/null"
 enable-automatic-connections=false
 ; accepted alternative: 'asio' (only when compiling CAF with ASIO)
 network-backend='default'
+; sets the maximum number of consecutive I/O reads per broker
+max-consecutive-reads=50
 ; heartbeat message interval in ms (0 disables heartbeating)
 heartbeat-interval=0
 
