--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@ project(caf_cash CXX)
 
 # check whether submodules are available
 if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/third_party/pybind/CMakeLists.txt")
+  message(WARNING "pybind submodule not loaded, skip libcaf_python")
   set(CAF_NO_PYTHON yes)
 else()
-  message(STATUS "try config bin: ${CAF_PYTHON_CONFIG_BIN}")
   if(NOT "${CAF_PYTHON_CONFIG_BIN}" STREQUAL "")
     execute_process(COMMAND "${CAF_PYTHON_CONFIG_BIN}" --includes
                     OUTPUT_VARIABLE PYTHON_INCLUDE_FLAGS)
@@ -25,12 +25,13 @@ else()
       include_directories("${dir}")
     endforeach()
   else()
-    find_package(PythonLibs 3.5)
+    find_package(PythonLibs)
     if (NOT PYTHONLIBS_FOUND)
-      message(STATUS "Unable to find Python >= 3.5, disable Python binding")
-      message(STATUS "Set CAF_PYTHON_CONFIG_BIN or use './configure --with-python-conf=...' to use python-conf")
+      message(STATUS "Unable to find Python, disable Python binding")
+      message(STATUS "Set CAF_PYTHON_CONFIG_BIN or use './configure --with-python-config=...' to use python-conf")
       set(CAF_NO_PYTHON yes)
     else()
+      message(STATUS "Found Python ${PYTHONLIBS_VERSION_STRING}")
       include_directories(${PYTHON_INCLUDE_DIRS})
     endif()
   endif()
