Make work stealing configurable, closes #464

--- a/examples/caf-application.ini
+++ b/examples/caf-application.ini
@@ -7,14 +7,31 @@
 policy='stealing'
 ; configures whether the scheduler generates profiling output
 enable-profiling=false
-; can be overriden to force a fixed number of threads
+; forces a fixed number of threads if set
 max-threads=<number of cores>
-; configures the maximum number of messages actors can consume in one run
+; maximum number of messages actors can consume in one run
 max-throughput=<infinite>
 ; measurement resolution in milliseconds (only if profiling is enabled)
 profiling-ms-resolution=100
 ; output file for profiler data (only if profiling is enabled)
 profiling-output-file="/dev/null"
+
+; when using 'stealing' as scheduler policy
+[work-stealing]
+; number of zero-sleep-interval polling attempts
+aggressive-poll-attempts=100
+; frequency of steal attempts during aggressive polling
+aggressive-steal-interval=10
+; number of moderately aggressive polling attempts
+moderate-poll-attempts=500
+; frequency of steal attempts during moderate polling
+moderate-steal-interval=5
+; sleep interval in microseconds between poll attempts
+moderate-sleep-duration=50
+; frequency of steal attempts during relaxed polling
+relaxed-steal-interval=1
+; sleep interval in microseconds between poll attempts
+relaxed-sleep-duration=10000
 
 ; when loading io::middleman
 [middleman]
@@ -22,7 +39,7 @@ profiling-output-file="/dev/null"
 enable-automatic-connections=false
 ; accepted alternative: 'asio' (only when compiling CAF with ASIO)
 network-backend='default'
-; sets the maximum number of consecutive I/O reads per broker
+; maximum number of consecutive I/O reads per broker
 max-consecutive-reads=50
 ; heartbeat message interval in ms (0 disables heartbeating)
 heartbeat-interval=0
