Use `expected<T>` instead of throwing exceptions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,10 @@ if(NOT CAF_NO_MEM_MANAGEMENT)
   set(CAF_NO_MEM_MANAGEMENT no)
 endif()
 
+if(NOT CAF_NO_EXCEPTIONS)
+  set(CAF_NO_EXCEPTIONS no)
+endif()
+
 if(NOT CAF_BUILD_STATIC_ONLY)
   set(CAF_BUILD_STATIC_ONLY no)
 endif()
@@ -284,7 +288,9 @@ macro(to_int_value name)
     set(${name}_INT -1)
   endif()
 endmacro()
+
 to_int_value(CAF_LOG_LEVEL)
+to_int_value(CAF_NO_EXCEPTIONS)
 to_int_value(CAF_NO_MEM_MANAGEMENT)
 to_int_value(CAF_ENABLE_RUNTIME_CHECKS)
 
@@ -593,6 +599,7 @@ invertYesNo(CAF_NO_IO CAF_BUILD_IO)
 invertYesNo(CAF_NO_EXAMPLES CAF_BUILD_EXAMPLES)
 invertYesNo(CAF_NO_TOOLS CAF_BUILD_TOOLS)
 invertYesNo(CAF_NO_UNIT_TESTS CAF_BUILD_UNIT_TESTS)
+invertYesNo(CAF_NO_EXCEPTIONS CAF_BUILD_WITH_EXCEPTIONS)
 invertYesNo(CAF_NO_MEM_MANAGEMENT CAF_BUILD_MEM_MANAGEMENT)
 invertYesNo(CAF_NO_BENCHMARKS CAF_BUILD_BENCHMARKS)
 invertYesNo(CAF_NO_OPENCL CAF_BUILD_OPENCL)
@@ -613,6 +620,7 @@ if(NOT CAF_NO_SUMMARY)
         "\nRuntime checks:    ${CAF_ENABLE_RUNTIME_CHECKS}"
         "\nLog level:         ${LOG_LEVEL_STR}"
         "\nWith mem. mgmt.:   ${CAF_BUILD_MEM_MANAGEMENT}"
+        "\nWith exceptions:   ${CAF_BUILD_WITH_EXCEPTIONS}"
         "\n"
         "\nBuild I/O module:  ${CAF_BUILD_IO}"
         "\nBuild tools:       ${CAF_BUILD_TOOLS}"
