--- a/examples/caf-application.ini
+++ b/examples/caf-application.ini
@@ -40,7 +40,7 @@ enable-automatic-connections=false
 ; accepted alternative: 'asio' (only when compiling CAF with ASIO)
 network-backend='default'
 ; application identifier of this node
-app-identifier=''
+app-identifier=""
 ; maximum number of consecutive I/O reads per broker
 max-consecutive-reads=50
 ; heartbeat message interval in ms (0 disables heartbeating)
