Unify serialize and to_string API via inspect
Replace existing `to_string`/`serialize` function pair with a single `inspect`.
This change is backwards compatible, i.e., serializers and deserializers pick
up `serialize` functions via ADL if available. User-defined `to_string`
functions are preferred over `inspect`. Formatting hints and other meta
information that can be evaluated by inspectors are realized with annotations.
Close #470.

--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -40,7 +40,6 @@ set (LIBCAF_CORE_SRCS
      src/continue_helper.cpp
      src/decorated_tuple.cpp
      src/default_invoke_result_visitor.cpp
-     src/deep_to_string.cpp
      src/default_attachable.cpp
      src/deserializer.cpp
      src/duration.cpp
@@ -89,6 +88,7 @@ set (LIBCAF_CORE_SRCS
      src/skip.cpp
      src/splitter.cpp
      src/sync_request_bouncer.cpp
+     src/stringification_inspector.cpp
      src/try_match.cpp
      src/type_erased_value.cpp
      src/type_erased_tuple.cpp
