Fix flags for GCOV build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,7 +155,7 @@ endif()
 # set compiler flags for GCOV if requested
 if(CAF_ENABLE_GCOV)
   set(NO_INLINE "-fno-inline -fno-inline-small-functions -fno-default-inline")
-  set(EXTRA_FLAGS "${EXTRA_FLAGS} -fprofile-arcs ${NO_INLINE}")
+  set(EXTRA_FLAGS "${EXTRA_FLAGS} -fprofile-arcs -ftest-coverage ${NO_INLINE}")
 endif()
 # enable a ton of warnings if --more-clang-warnings is used
 if(CAF_MORE_WARNINGS)
