Fix flag dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ endif()
 ################################################################################
 
 if(CAF_FORCE_NO_EXCEPTIONS)
-  set(CAF_NO_EXCEPTIONS)
+  set(CAF_NO_EXCEPTIONS yes)
 endif()
 
 ################################################################################
