Add script for making CAF releases

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ manual
 bii/*
 libcaf_core/caf/detail/build_config.hpp
 .ycm_extra_conf.pyc
+blog_release_note.md
+github_release_note.md
+.make-release-steps.bash
