--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -34,6 +34,7 @@ set (LIBCAF_CORE_SRCS
      src/behavior_impl.cpp
      src/blocking_actor.cpp
      src/blocking_behavior.cpp
+     src/color.cpp
      src/concatenated_tuple.cpp
      src/config_option.cpp
      src/continue_helper.cpp
