--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,10 @@ if(NOT CAF_NO_OPENCL)
   set(CAF_NO_OPENCL no)
 endif()
 
+if(NOT CAF_NO_HWLOC)
+  set(CAF_NO_HWLOC no)
+endif()
+
 if(NOT CAF_NO_PYTHON)
   set(CAF_NO_PYTHON no)
 endif()
@@ -398,7 +402,7 @@ add_custom_target(uninstall
 
 
 ################################################################################
-#                       set inclue paths for subprojects                       #
+#                       set include paths for subprojects                       #
 ################################################################################
 
 # path to caf core & io headers
@@ -500,6 +504,18 @@ if(NOT CAF_NO_OPENCL)
   if(OpenCL_FOUND)
     add_optional_caf_lib(opencl)
     add_optional_caf_binaries(libcaf_opencl/examples)
+  else()
+    set(CAF_NO_OPENCL yes)
+  endif()
+endif()
+
+# load hwloc library if not told otherwise
+if(NOT CAF_NO_HWLOC)
+  find_package(Hwloc)
+  if(Hwloc_FOUND)
+    add_optional_caf_lib(hwloc)
+  else()
+    set(CAF_NO_HWLOC yes)
   endif()
 endif()
 
@@ -682,6 +698,7 @@ invertYesNo(CAF_NO_EXCEPTIONS CAF_BUILD_WITH_EXCEPTIONS)
 invertYesNo(CAF_NO_MEM_MANAGEMENT CAF_BUILD_MEM_MANAGEMENT)
 invertYesNo(CAF_NO_BENCHMARKS CAF_BUILD_BENCHMARKS)
 invertYesNo(CAF_NO_OPENCL CAF_BUILD_OPENCL)
+invertYesNo(CAF_NO_HWLOC CAF_BUILD_HWLOC)
 invertYesNo(CAF_NO_PYTHON CAF_BUILD_PYTHON)
 # collect all compiler flags
 string(TOUPPER "${CMAKE_BUILD_TYPE}" UPPER_BUILD_TYPE)
@@ -707,6 +724,7 @@ if(NOT CAF_NO_SUMMARY)
         "\nBuild unit tests:  ${CAF_BUILD_UNIT_TESTS}"
         "\nBuild benchmarks:  ${CAF_BUILD_BENCHMARKS}"
         "\nBuild opencl:      ${CAF_BUILD_OPENCL}"
+        "\nBuild hwloc:       ${CAF_BUILD_HWLOC}"
         "\nBuild Python:      ${CAF_BUILD_PYTHON}"
         "\n"
         "\nCXX:               ${CMAKE_CXX_COMPILER}"
