--- a/libcaf_opencl/examples/CMakeLists.txt
+++ b/libcaf_opencl/examples/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 project(caf_examples_opencl CXX)
 
-if(OpenCL_LIBRARIES)
+if(OpenCL_LIBRARIES AND NOT CAF_NO_EXAMPLES)
   add_custom_target(opencl_examples)
   include_directories(${LIBCAF_INCLUDE_DIRS})
   if(${CMAKE_SYSTEM_NAME} MATCHES "Window")
@@ -21,4 +21,5 @@ if(OpenCL_LIBRARIES)
   endmacro()
   add(proper_matrix .)
   add(simple_matrix .)
+  add(scan .)
 endif()
