Keep frame pointer in debug builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -302,7 +302,7 @@ if(NOT CMAKE_CXX_FLAGS)
   set(CMAKE_CXX_FLAGS                   "-std=c++11 -Wextra -Wall -pedantic ${EXTRA_FLAGS}")
 endif()
 if(NOT CMAKE_CXX_FLAGS_DEBUG)
-  set(CMAKE_CXX_FLAGS_DEBUG             "-O0 -g")
+  set(CMAKE_CXX_FLAGS_DEBUG             "-O0 -g -fno-omit-frame-pointer")
 endif()
 if(NOT CMAKE_CXX_FLAGS_MINSIZEREL)
   set(CMAKE_CXX_FLAGS_MINSIZEREL        "-Os")
@@ -311,7 +311,7 @@ if(NOT CMAKE_CXX_FLAGS_RELEASE)
   set(CMAKE_CXX_FLAGS_RELEASE           "-O3 -DNDEBUG")
 endif()
 if(NOT CMAKE_CXX_FLAGS_RELWITHDEBINFO)
-  set(CMAKE_CXX_FLAGS_RELWITHDEBINFO    "-O2 -g")
+  set(CMAKE_CXX_FLAGS_RELWITHDEBINFO    "-O2 -g -fno-omit-frame-pointer")
 endif()
 # set build default build type to RelWithDebInfo if not set
 if(NOT CMAKE_BUILD_TYPE)
