Remove redudant compiler flag
-O0 doesn't do optimizations that would remove the frame pointer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -302,7 +302,7 @@ if(NOT CMAKE_CXX_FLAGS)
   set(CMAKE_CXX_FLAGS                   "-std=c++11 -Wextra -Wall -pedantic ${EXTRA_FLAGS}")
 endif()
 if(NOT CMAKE_CXX_FLAGS_DEBUG)
-  set(CMAKE_CXX_FLAGS_DEBUG             "-O0 -g -fno-omit-frame-pointer")
+  set(CMAKE_CXX_FLAGS_DEBUG             "-O0 -g")
 endif()
 if(NOT CMAKE_CXX_FLAGS_MINSIZEREL)
   set(CMAKE_CXX_FLAGS_MINSIZEREL        "-Os")
