Allow users to disable detaching of MM actors

--- a/examples/caf-application.ini
+++ b/examples/caf-application.ini
@@ -45,4 +45,5 @@ app-identifier=""
 max-consecutive-reads=50
 ; heartbeat message interval in ms (0 disables heartbeating)
 heartbeat-interval=0
-
+; configures whether the MM detaches its internal utility actors
+middleman-detach-utility-actors=true
